--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 <body>
   <app-root></app-root>
 
+  <!--Animacion Foto-->
+  <script src="./assets/JS/animacion-foto.js"></script>
   <!--JS y Popper Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
